# linelight

./: .gitignore  .prettierignore  LICENSE  README.md  eslint.config.js  index.html  learn.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
explorations/: 2026-05-04-structural-color-gallery.html
src/: learn.ts  main.ts  suite-scope.ts  types.ts
src/app/: mount-lab.ts
src/atlas/: schema.sql  types.ts
src/atlas-app/: main.ts  resolve-transition.ts  router.ts  seed.ts  spectral-anim.ts  state.ts  style.css  view.ts
src/data/: hydrogen-balmer.ts  index.ts  regions.ts  survey-lines.ts  tiers.ts  types.ts
src/selection/: h-alpha.ts
src/store/: defaults.ts  fire-bus.ts  index.ts  persist.ts  url.ts
src/styles/: shell.css
tests/: store.test.ts
tests/atlas/: atlas-db.test.ts  render-coord-system.test.ts  render-curved-space.test.ts  render-element.test.ts  render-energy-level.test.ts  render-identity.test.ts  render-lattice.test.ts  render-polytope.test.ts  render-series.test.ts  render-special-function.test.ts  render-spectral-line.test.ts  render-symmetry-group.test.ts  render-tiling.test.ts  render-transition-type.test.ts  render-unit.test.ts
tests/atlas-app/: resolve-transition.test.ts  state.test.ts
tests/data/: cultural-context.test.ts  (+1 more)
tools/: README.md  atlas-seeds.ts  build-atlas-app.ts  build-atlas-db.ts  build-atlas-thumbnails.ts  ingest_codata.py  ingest_nist.py  pyproject.toml  stage-atlas-app.ts  test_ingest_nist.py
tools/_fixtures/: H_sample.tsv
(+138 files in other folders)
