[project]
name = "linelight-tools"
version = "0.1.0"
description = "Build-time tools for linelight: NIST ASD ingestion, line verification."
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.7",
  "click>=8.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
